syntax = "proto3";

package stash.GRPC.V1.Documents;

message DeleteReply { }
