syntax = "proto3";

package stash.GRPC.V1.Documents;
import "documents/document.proto";

message GetReply {
  Document source = 1;
}
